--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,49 +43,24 @@ jobs:
         run: |
           echo "🔐 [SECRETS] Проверяем все секреты..."
           
-          if [ -z "$FIREBASE_API_KEY" ]; then
-            echo "❌ FIREBASE_API_KEY отсутствует"
-            exit 1
-          fi
-          
-          if [ -z "$FIREBASE_AUTH_DOMAIN" ]; then
-            echo "❌ FIREBASE_AUTH_DOMAIN отсутствует"
-            exit 1
-          fi
-          
-          if [ -z "$FIREBASE_DATABASE_URL" ]; then
-            echo "❌ FIREBASE_DATABASE_URL отсутствует"
-            exit 1
-          fi
-          
-          if [ -z "$FIREBASE_PROJECT_ID" ]; then
-            echo "❌ FIREBASE_PROJECT_ID отсутствует"
-            exit 1
-          fi
-          
-          if [ -z "$FIREBASE_STORAGE_BUCKET" ]; then
-            echo "❌ FIREBASE_STORAGE_BUCKET отсутствует"
-            exit 1
-          fi
-          
-          if [ -z "$FIREBASE_MESSAGING_SENDER_ID" ]; then
-            echo "❌ FIREBASE_MESSAGING_SENDER_ID отсутствует"
-            exit 1
-          fi
-          
-          if [ -z "$FIREBASE_APP_ID" ]; then
-            echo "❌ FIREBASE_APP_ID отсутствует"
-            exit 1
-          fi
-          
-          if [ -z "$FIREBASE_MEASUREMENT_ID" ]; then
-            echo "❌ FIREBASE_MEASUREMENT_ID отсутствует"
-            exit 1
-          fi
+          if [ -z "$FIREBASE_API_KEY" ]; then echo "❌ FIREBASE_API_KEY отсутствует"; exit 1; fi
+          if [ -z "$FIREBASE_AUTH_DOMAIN" ]; then echo "❌ FIREBASE_AUTH_DOMAIN отсутствует"; exit 1; fi
+          if [ -z "$FIREBASE_DATABASE_URL" ]; then echo "❌ FIREBASE_DATABASE_URL отсутствует"; exit 1; fi
+          if [ -z "$FIREBASE_PROJECT_ID" ]; then echo "❌ FIREBASE_PROJECT_ID отсутствует"; exit 1; fi
+          if [ -z "$FIREBASE_STORAGE_BUCKET" ]; then echo "❌ FIREBASE_STORAGE_BUCKET отсутствует"; exit 1; fi
+          if [ -z "$FIREBASE_MESSAGING_SENDER_ID" ]; then echo "❌ FIREBASE_MESSAGING_SENDER_ID отсутствует"; exit 1; fi
+          if [ -z "$FIREBASE_APP_ID" ]; then echo "❌ FIREBASE_APP_ID отсутствует"; exit 1; fi
+          if [ -z "$FIREBASE_MEASUREMENT_ID" ]; then echo "❌ FIREBASE_MEASUREMENT_ID отсутствует"; exit 1; fi
           
           echo "✅ Все 8 секретов присутствуют!"
 
-      - name: 🔧 Generate Firebase Config
+      # --- НАЧАЛО ВСТАВКИ ВАШЕГО КОДА ---
+      - name: 🧹 Clear GitHub Pages Cache
+        run: |
+          echo "🧹 [CACHE] Очищаем кэш GitHub Pages..."
+          echo "timestamp=$(date +%s)" >> $GITHUB_OUTPUT
+
+      - name: 🔧 Generate Firebase Config with Cache Busting
         env:
           FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
           FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
@@ -95,22 +70,8 @@ jobs:
           FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
-        run: |
-          echo "🔧 [GENERATE] Запускаем генератор..."
-          node scripts/generate-config.js
-          
-          echo ""
-          echo "✅ [CHECK] Проверяем результат..."
-          if [ -f "firebase-config.js" ]; then
-            echo "✅ firebase-config.js создан"
-            ls -lh firebase-config.js
-            echo ""
-            echo "📄 Первые 10 строк файла:"
-            head -10 firebase-config.js
-          else
-            echo "❌ firebase-config.js НЕ создан!"
-            exit 1
-          fi
+        run: node scripts/generate-config.js
+      # --- КОНЕЦ ВСТАВКИ ВАШЕГО КОДА ---
 
       - name: 📄 Create Support Files
         run: |
